--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Multistep Checkout Experience</title>
+    <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../node_modules/prop-types/prop-types.js"></script> -->
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+</head>
 
+<body>
+    <div id="app">
+        <h5>
+            <br /><br />
+            this message will disappear when <em>app</em> view is correctly rendered
+            <br /><br /><br />
+        </h5>
+    </div>
+    <script type="module" src="app"></script>
+</body>
+
+</html>
